force-app/main/default/objects/Progress_Report__c/fields/Youth_Served__c.field-meta.xml
<CustomField>
    <fullName>Youth_Served__c</fullName>
    <label>Youth Served</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>