force-app/main/default/objects/Progress_Report__c/fields/Youth_Successfully_Completed_Program__c.field-meta.xml
<CustomField>
    <fullName>Youth_Successfully_Completed_Program__c</fullName>
    <label>Youth Successfully Completed Program</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>