force-app/main/default/objects/Progress_Report__c/fields/Youth_Wellbeing_Increase__c.field-meta.xml
<CustomField>
    <fullName>Youth_Wellbeing_Increase__c</fullName>
    <label>Youth Wellbeing Increase</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>