force-app/main/default/objects/Progress_Report__c/fields/Youth_Who_Offend__c.field-meta.xml
<CustomField>
    <fullName>Youth_Who_Offend__c</fullName>
    <label>Youth Who Offend</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>