force-app/main/default/objects/Progress_Report__c/recordTypes/Monthly.recordType-meta.xml
<RecordType>
    <fullName>Monthly</fullName>
    <active>true</active>
    <label>Monthly</label>
</RecordType>