force-app/main/default/objects/Progress_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Grant__c</columns>
    <columns>Organization__c</columns>
    <columns>Month__c</columns>
    <columns>Quarter__c</columns>
    <columns>Year__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>