force-app/main/default/objects/Progress_Report__c/listViews/BJAG_Reports.listView-meta.xml
<ListView>
    <fullName>BJAG_Reports</fullName>
    <columns>NAME</columns>
    <columns>Organization_Name_Text__c</columns>
    <columns>DUNS_Number__c</columns>
    <columns>Year__c</columns>
    <columns>Quarter__c</columns>
    <columns>Status__c</columns>
    <columns>Submitted_By_Text__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Organization__c</field>
        <operation>equals</operation>
        <value>BJAG Placeholder</value>
    </filters>
    <label>BJAG Reports</label>
</ListView>