force-app/main/default/objects/Progress_Report__c/listViews/Quarterly_Progress_Reports.listView-meta.xml
<ListView>
    <fullName>Quarterly_Progress_Reports</fullName>
    <columns>NAME</columns>
    <columns>Grant__c</columns>
    <columns>Organization__c</columns>
    <columns>Quarter__c</columns>
    <columns>Year__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Progress_Report__c.Quarterly</value>
    </filters>
    <label>Quarterly Progress Reports</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>