force-app/main/default/objects/Progress_Report__c/listViews/Ripken_Monthly_Progress_Reports.listView-meta.xml
<ListView>
    <fullName>Ripken_Monthly_Progress_Reports</fullName>
    <columns>NAME</columns>
    <columns>Grant__c</columns>
    <columns>Organization__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>,Progress_Report__c.Monthly</value>
    </filters>
    <filters>
        <field>FirstPic_National_Org_Code__c</field>
        <operation>equals</operation>
        <value>Ripken</value>
    </filters>
    <label>Ripken Monthly Progress Reports</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>